// Code generated by internal/codegen. DO NOT EDIT.
syntax = "proto3";

package alertmanager;

// import "github.com/rancher/opni/internal/codegen/cli/cli.proto";

option go_package = "github.com/rancher/opni/internal/alertmanager";

message Receiver {
  optional string          name              = 1;
  repeated DiscordConfig   discord_configs   = 2;
  repeated EmailConfig     email_configs     = 3;
  repeated PagerdutyConfig pagerduty_configs = 4;
  repeated SlackConfig     slack_configs     = 5;
  repeated WebhookConfig   webhook_configs   = 6;
  repeated OpsGenieConfig  opsgenie_configs  = 7;
  repeated WechatConfig    wechat_configs    = 8;
  repeated PushoverConfig  pushover_configs  = 9;
  repeated VictorOpsConfig victorops_configs = 10;
  repeated SNSConfig       sns_configs       = 11;
  repeated TelegramConfig  telegram_configs  = 12;
  repeated WebexConfig     webex_configs     = 13;
  repeated MSTeamsConfig   msteams_configs   = 14;
}

message DiscordConfig {
  NotifierConfig         NotifierConfig = 1;
  ConfigHTTPClientConfig http_config    = 2;
  string                 webhook_url    = 3;
  optional string        title          = 4;
  optional string        message        = 5;
}

message EmailConfig {
  NotifierConfig      NotifierConfig     = 1;
  optional string     to                 = 2;
  optional string     from               = 3;
  optional string     hello              = 4;
  HostPort            smarthost          = 5;
  optional string     auth_username      = 6;
  optional string     auth_password      = 7;
  optional string     auth_password_file = 8;
  optional string     auth_secret        = 9;
  optional string     auth_identity      = 10;
  map<string, string> headers            = 11;
  optional string     html               = 12;
  optional string     text               = 13;
  optional bool       require_tls        = 14;
  ConfigTLSConfig     tls_config         = 15;
}

message HostPort {
  optional string Host = 1;
  optional string Port = 2;
}

message MSTeamsConfig {
  NotifierConfig         NotifierConfig = 1;
  ConfigHTTPClientConfig http_config    = 2;
  string                 webhook_url    = 3;
  optional string        title          = 4;
  optional string        text           = 5;
}

message NotifierConfig {
  optional bool send_resolved = 1;
}

message OpsGenieConfig {
  NotifierConfig                   NotifierConfig = 1;
  ConfigHTTPClientConfig           http_config    = 2;
  optional string                  api_key        = 3;
  optional string                  api_key_file   = 4;
  string                           api_url        = 5;
  optional string                  message        = 6;
  optional string                  description    = 7;
  optional string                  source         = 8;
  map<string, string>              details        = 9;
  optional string                  entity         = 10;
  repeated OpsGenieConfigResponder responders     = 11;
  optional string                  actions        = 12;
  optional string                  tags           = 13;
  optional string                  note           = 14;
  optional string                  priority       = 15;
  optional bool                    update_alerts  = 16;
}

message OpsGenieConfigResponder {
  optional string id       = 1;
  optional string name     = 2;
  optional string username = 3;
  optional string type     = 4;
}

message PagerdutyConfig {
  NotifierConfig          NotifierConfig   = 1;
  ConfigHTTPClientConfig  http_config      = 2;
  optional string         service_key      = 3;
  optional string         service_key_file = 4;
  optional string         routing_key      = 5;
  optional string         routing_key_file = 6;
  string                  url              = 7;
  optional string         client           = 8;
  optional string         client_url       = 9;
  optional string         description      = 10;
  map<string, string>     details          = 11;
  repeated PagerdutyImage images           = 12;
  repeated PagerdutyLink  links            = 13;
  optional string         source           = 14;
  optional string         severity         = 15;
  optional string         class            = 16;
  optional string         component        = 17;
  optional string         group            = 18;
}

message PagerdutyImage {
  optional string src  = 1;
  optional string alt  = 2;
  optional string href = 3;
}

message PagerdutyLink {
  optional string href = 1;
  optional string text = 2;
}

message PushoverConfig {
  NotifierConfig         NotifierConfig = 1;
  ConfigHTTPClientConfig http_config    = 2;
  optional string        user_key       = 3;
  optional string        user_key_file  = 4;
  optional string        token          = 5;
  optional string        token_file     = 6;
  optional string        title          = 7;
  optional string        message        = 8;
  optional string        url            = 9;
  optional string        url_title      = 10;
  optional string        device         = 11;
  optional string        sound          = 12;
  optional string        priority       = 13;
  optional int64         retry          = 14;
  optional int64         expire         = 15;
  optional bool          html           = 16;
}

message SNSConfig {
  NotifierConfig         NotifierConfig = 1;
  ConfigHTTPClientConfig http_config    = 2;
  optional string        api_url        = 3;
  Sigv4SigV4Config       sigv4          = 4;
  optional string        topic_arn      = 5;
  optional string        phone_number   = 6;
  optional string        target_arn     = 7;
  optional string        subject        = 8;
  optional string        message        = 9;
  map<string, string>    attributes     = 10;
}

message SlackAction {
  optional string        type    = 1;
  optional string        text    = 2;
  optional string        url     = 3;
  optional string        style   = 4;
  optional string        name    = 5;
  optional string        value   = 6;
  SlackConfirmationField confirm = 7;
}

message SlackConfig {
  NotifierConfig         NotifierConfig = 1;
  ConfigHTTPClientConfig http_config    = 2;
  string                 api_url        = 3;
  optional string        api_url_file   = 4;
  optional string        channel        = 5;
  optional string        username       = 6;
  optional string        color          = 7;
  optional string        title          = 8;
  optional string        title_link     = 9;
  optional string        pretext        = 10;
  optional string        text           = 11;
  repeated SlackField    fields         = 12;
  optional bool          short_fields   = 13;
  optional string        footer         = 14;
  optional string        fallback       = 15;
  optional string        callback_id    = 16;
  optional string        icon_emoji     = 17;
  optional string        icon_url       = 18;
  optional string        image_url      = 19;
  optional string        thumb_url      = 20;
  optional bool          link_names     = 21;
  repeated string        mrkdwn_in      = 22;
  repeated SlackAction   actions        = 23;
}

message SlackConfirmationField {
  optional string text         = 1;
  optional string title        = 2;
  optional string ok_text      = 3;
  optional string dismiss_text = 4;
}

message SlackField {
  optional string title = 1;
  optional string value = 2;
  optional bool   short = 3;
}

message TelegramConfig {
  NotifierConfig         NotifierConfig        = 1;
  ConfigHTTPClientConfig http_config           = 2;
  string                 api_url               = 3;
  optional string        bot_token             = 4;
  optional string        bot_token_file        = 5;
  optional int64         chat_id               = 6;
  optional string        message               = 7;
  optional bool          disable_notifications = 8;
  optional string        parse_mode            = 9;
}

message VictorOpsConfig {
  NotifierConfig         NotifierConfig      = 1;
  ConfigHTTPClientConfig http_config         = 2;
  optional string        api_key             = 3;
  optional string        api_key_file        = 4;
  string                 api_url             = 5;
  optional string        routing_key         = 6;
  optional string        message_type        = 7;
  optional string        state_message       = 8;
  optional string        entity_display_name = 9;
  optional string        monitoring_tool     = 10;
  map<string, string>    custom_fields       = 11;
}

message WebexConfig {
  NotifierConfig         NotifierConfig = 1;
  ConfigHTTPClientConfig http_config    = 2;
  string                 api_url        = 3;
  optional string        message        = 4;
  optional string        room_id        = 5;
}

message WebhookConfig {
  NotifierConfig         NotifierConfig = 1;
  ConfigHTTPClientConfig http_config    = 2;
  string                 url            = 3;
  optional string        url_file       = 4;
  optional uint64        max_alerts     = 5;
}

message WechatConfig {
  NotifierConfig         NotifierConfig = 1;
  ConfigHTTPClientConfig http_config    = 2;
  optional string        api_secret     = 3;
  optional string        corp_id        = 4;
  optional string        message        = 5;
  string                 api_url        = 6;
  optional string        to_user        = 7;
  optional string        to_party       = 8;
  optional string        to_tag         = 9;
  optional string        agent_id       = 10;
  optional string        message_type   = 11;
}

message ConfigAuthorization {
  optional string type             = 1;
  optional string credentials      = 2;
  optional string credentials_file = 3;
}

message ConfigBasicAuth {
  optional string username      = 1;
  optional string password      = 2;
  optional string password_file = 3;
}

message ConfigHTTPClientConfig {
  ConfigBasicAuth     basic_auth        = 1;
  ConfigAuthorization authorization     = 2;
  ConfigOAuth2        oauth2            = 3;
  optional string     bearer_token      = 4;
  optional string     bearer_token_file = 5;
  ConfigTLSConfig     tls_config        = 6;
  optional bool       follow_redirects  = 7;
  optional bool       enable_http2      = 8;
  ConfigProxyConfig   ProxyConfig       = 9;
}

message ConfigOAuth2 {
  optional string     client_id          = 1;
  optional string     client_secret      = 2;
  optional string     client_secret_file = 3;
  repeated string     scopes             = 4;
  optional string     token_url          = 5;
  map<string, string> endpoint_params    = 6;
  ConfigTLSConfig     tls_config         = 7;
  ConfigProxyConfig   ProxyConfig        = 8;
}

message ConfigProxyConfig {
  string              proxy_url              = 1;
  optional string     no_proxy               = 2;
  optional bool       proxy_from_environment = 3;
  map<string, string> proxy_connect_header   = 4;
}

message ConfigTLSConfig {
  optional string ca                   = 1;
  optional string cert                 = 2;
  optional string key                  = 3;
  optional string ca_file              = 4;
  optional string cert_file            = 5;
  optional string key_file             = 6;
  optional string server_name          = 7;
  optional bool   insecure_skip_verify = 8;
  optional uint32 min_version          = 9;
  optional uint32 max_version          = 10;
}

message Sigv4SigV4Config {
  optional string region     = 1;
  optional string access_key = 2;
  optional string secret_key = 3;
  optional string profile    = 4;
  optional string role_arn   = 5;
}
